--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#c63a3a</color>
+    <color name="colorPrimaryDark">#a12f2f</color>
+    <color name="colorAccent">#e69132</color>
 
     <color name="white">#ffffff</color>
 </resources>
