--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -37,14 +37,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="visible"
-            tools:visibility="visible">
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_edit_location"/>
+                android:id="@+id/locationIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_location_off"/>
 
             <TextView
                 android:id="@+id/destinationIndicator"
@@ -52,7 +51,9 @@
                 android:layout_height="wrap_content"
                 android:text="50.2525, 20.789"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="18sp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
         </LinearLayout>
 
@@ -71,7 +72,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/compass_background_black">
 
-            <com.nawrot.mateusz.compass.RotationImageView
+            <com.nawrot.mateusz.compass.view.RotationImageView
                 android:id="@+id/compassArrow"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
